[project]
name = "posts"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Fei-Wang", email = "fei.comm@icloud.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["einops>=0.8.0", "torch~=2.2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I"]
